shell-extensions: Don't show toggle switches for extensions

The UI for extension toggle switches was never really thought out
that well, and it looks awful. Remove it and replace it with code
that simply disables all extensions.

https://bugzilla.gnome.org/show_bug.cgi?id=671693