gnome-session/gsm-shell-extensions.c
@@ -29,50 +29,6 @@
 
 #include "gsm-shell-extensions.h"
 
-
-struct _GsmShellExtension
-{
-  gchar *uuid;
-
-  gchar *name;
-  gchar *description;
-  gboolean enabled;
-};
-
-static void
-gsm_shell_extension_free (gpointer data)
-{
-  GsmShellExtension *extension = (GsmShellExtension *)data;
-
-  g_free (extension->uuid);
-  g_free (extension->name);
-  g_free (extension->description);
-}
-
-gchar *
-gsm_shell_extension_get_uuid (GsmShellExtension *extension)
-{
-  return extension->uuid;
-}
-
-gchar *
-gsm_shell_extension_get_name (GsmShellExtension *extension)
-{
-  return extension->name;
-}
-
-gchar *
-gsm_shell_extension_get_description (GsmShellExtension *extension)
-{
-  return extension->description;
-}
-
-gboolean
-gsm_shell_extension_get_is_enabled (GsmShellExtension *extension)
-{
-  return extension->enabled;
-}
-
 #define SHELL_SCHEMA "org.gnome.shell"
 #define ENABLED_EXTENSIONS_KEY "enabled-extensions"
 
@@ -81,9 +37,7 @@ gsm_shell_extension_get_is_enabled (GsmShellExtension *extension)
 struct _GsmShellExtensionsPrivate
 {
   GSettings *settings;
-
-  /* uuid => GsmShellExtension */
-  GHashTable *uuid_to_extension;
+  guint num_extensions;
 };
 
 G_DEFINE_TYPE (GsmShellExtensions, gsm_shell_extensions, G_TYPE_OBJECT);
@@ -107,12 +61,6 @@ gsm_shell_extensions_finalize (GObject *object)
       priv->settings = NULL;
     }
 
-  if (priv->uuid_to_extension != NULL)
-    {
-      g_hash_table_unref (priv->uuid_to_extension);
-      priv->uuid_to_extension = NULL;
-    }
-
   G_OBJECT_CLASS (gsm_shell_extensions_parent_class)->finalize (object);
 }
 
@@ -130,28 +78,6 @@ gsm_shell_extensions_class_init (GsmShellExtensionsClass *klass)
   object_class = G_OBJECT_CLASS (klass);
   object_class->finalize = gsm_shell_extensions_finalize;
   g_type_class_add_private (object_class, sizeof (GsmShellExtensionsPrivate));
-}
-
-static void
-gsm_shell_extensions_fetch_enabled (GsmShellExtensions *self)
-{
-  gchar **enabled_uuids;
-  gchar **uuids;
-
-  enabled_uuids = g_settings_get_strv (self->priv->settings, ENABLED_EXTENSIONS_KEY);
-
-  uuids = enabled_uuids;
-  while (*uuids != '\0')
-    {
-      GsmShellExtension *extension;
-      extension = g_hash_table_lookup (self->priv->uuid_to_extension, *uuids);
-      if (extension != NULL)
-        extension->enabled = TRUE;
-
-      uuids ++;
-    }
-
-  g_strfreev (enabled_uuids);
 }
 
 static void
@@ -175,15 +101,15 @@ gsm_shell_extensions_scan_dir (GsmShellExtensions *self,
 
   while ((info = g_file_enumerator_next_file (enumerator, NULL, NULL)) != NULL)
     {
-      GsmShellExtension *extension = g_slice_new (GsmShellExtension);
       gchar *metadata_filename;
-      gchar *metadata_uuid;
+      const gchar *metadata_uuid;
+      gchar *dir_uuid;
       JsonObject *metadata_root;
 
-      extension->uuid = (char *) g_file_info_get_name (info);
+      dir_uuid = (char *) g_file_info_get_name (info);
 
       metadata_filename = g_build_filename (g_file_get_path (dir),
-                                            extension->uuid,
+                                            dir_uuid,
                                             "metadata.json",
                                             NULL);
 
@@ -195,20 +121,14 @@ gsm_shell_extensions_scan_dir (GsmShellExtensions *self,
       metadata_root = json_node_get_object (json_parser_get_root (metadata_parser));
 
       metadata_uuid = json_object_get_string_member (metadata_root, "uuid");
-      if (!g_str_equal (metadata_uuid, extension->uuid))
+      if (!g_str_equal (metadata_uuid, dir_uuid))
         {
           g_warning ("Extension with dirname '%s' does not match metadata's UUID of '%s'. Skipping.",
-                     extension->uuid,
-                     metadata_uuid);
+                     dir_uuid, metadata_uuid);
           continue;
         }
 
-      extension->enabled = FALSE;
-      extension->name = g_strdup (json_object_get_string_member (metadata_root, "name"));
-      extension->description = g_strdup (json_object_get_string_member (metadata_root, "description"));
-
-      g_hash_table_insert (self->priv->uuid_to_extension,
-                           g_strdup (extension->uuid), extension);
+      self->priv->num_extensions++;
     }
 }
 
@@ -267,104 +187,16 @@ gsm_shell_extensions_init (GsmShellExtensions *self)
       schemas ++;
     }
 
-  if (self->priv->settings)
-    {
-      self->priv->uuid_to_extension = g_hash_table_new_full (g_str_hash,
-                                                             g_str_equal,
-                                                             g_free,
-                                                             gsm_shell_extension_free);
-      gsm_shell_extensions_scan (self);
-      gsm_shell_extensions_fetch_enabled (self);
-    }
+  if (self->priv->settings != NULL)
+    gsm_shell_extensions_scan (self);
 }
 
 gboolean
-gsm_shell_extensions_set_enabled (GsmShellExtensions *self,
-                                  gchar              *uuid,
-                                  gboolean            enabled)
+gsm_shell_extensions_disable_all (GsmShellExtensions *self)
 {
-  gsize i, length;
-  gchar **uuids;
-  const gchar **new_uuids;
-  GsmShellExtension *extension;
-
-  if (self->priv->settings == NULL)
-    return FALSE;
-
-  extension = g_hash_table_lookup (self->priv->uuid_to_extension,
-                                   uuid);
-
-  if (extension == NULL)
-    return FALSE;
-
-  if (extension->enabled == enabled)
-    return TRUE;
-
-  uuids = g_settings_get_strv (self->priv->settings, ENABLED_EXTENSIONS_KEY);
-  length = g_strv_length (uuids);
-
-  if (enabled)
-    {
-      new_uuids = g_new (const gchar *, length + 2); /* New key, NULL */
-      for (i = 0; i < length; i ++)
-        new_uuids[i] = g_strdup (uuids[i]);
-
-      new_uuids[i++] = g_strdup (uuid);
-      new_uuids[i] = NULL;
-    }
-  else
-    {
-      gsize j = 0;
-      new_uuids = g_new (const gchar *, length);
-      for (i = 0; i < length; i ++)
-        {
-          if (g_str_equal (uuids[i], uuid))
-            continue;
-
-          new_uuids[j] = g_strdup (uuids[i]);
-          j ++;
-        }
-
-      new_uuids[j] = NULL;
-    }
-
-  g_strfreev (uuids);
-
-  if (g_settings_set_strv (self->priv->settings,
-                           ENABLED_EXTENSIONS_KEY,
-                           new_uuids))
-    {
-      extension->enabled = enabled;
-      return TRUE;
-    }
-
-  return FALSE;
-}
-
-void
-gsm_shell_extensions_foreach (GsmShellExtensions    *self,
-                              GsmShellExtensionFunc  func,
-                              gpointer               user_data)
-{
-  GHashTableIter iter;
-  GsmShellExtension *extension;
-
-  if (self->priv->settings == NULL)
-    return;
-
-  g_hash_table_iter_init (&iter, self->priv->uuid_to_extension);
-  while (g_hash_table_iter_next (&iter, NULL, (gpointer) &extension))
-    (*func) (self, extension, user_data);
-}
-
-GsmShellExtension *
-gsm_shell_extensions_get_for_uuid (GsmShellExtensions *self,
-                                   gchar              *uuid)
-{
-  if (self->priv->settings == NULL)
-    return NULL;
-
-  return g_hash_table_lookup (self->priv->uuid_to_extension, uuid);
+  return g_settings_set_strv (self->priv->settings,
+                              ENABLED_EXTENSIONS_KEY,
+                              NULL);
 }
 
 guint
@@ -373,5 +205,5 @@ gsm_shell_extensions_n_extensions (GsmShellExtensions *self)
   if (self->priv->settings == NULL)
     return 0;
 
-  return g_hash_table_size (self->priv->uuid_to_extension);
+  return self->priv->num_extensions;
 }
